@@ -15,7 +15,7 @@ AC_INIT([liblo], [0.20], [steve@plugin.org.uk])
 #
 # If any interfaces have been removed since the last public release, then set
 # age to 0.
-LO_SO_VERSION=4:0:4
+LO_SO_VERSION=5:0:5
 
 AC_CONFIG_SRCDIR([src/address.c])
 AM_CONFIG_HEADER([config.h])
